Closed Bug 395708 Opened 17 years ago Closed 17 years ago

Clicking on Download Complete Notification does not bring up the Download Manager, when download manager is closed

Categories

(Toolkit :: Downloads API, defect, P2)

defect

Tracking

()

RESOLVED FIXED
mozilla1.9beta1

People

(Reporter: cbook, Assigned: Gavin)

Details

Attachments

(1 file, 2 obsolete files)

The Download Manager is set to close when all downloads are complete. When the Downloads are complete i get the small download complete notification on the right down side, nothing happens. I think the download manager should open then. Mozilla/5.0 (Windows; U; Windows NT 5.2; en-US; rv:1.9a8pre) Gecko/2007091005 Minefield/3.0a8pre ID:2007091005
Flags: in-litmus?
http://litmus.mozilla.org/show_test.cgi?id=4657 in-litmus+ Thanks for logging this, Carsten.
Flags: in-litmus? → in-litmus+
Attached patch option 1 (obsolete) — Splinter Review
It fails because the DM always passes 0 as the ID when it calls show() on the downloadmanagerUI, and the downloadmanagerUI doesn't deal with an invalid ID. This is one option: pass it via the alerts service. The problem with this is that the alert service only lets you pass in strings, so I had to convert the ID to a string in the caller and back to an integer in the callee, which is ugly.
Assignee: nobody → gavin.sharp
Status: NEW → ASSIGNED
Attached patch option 2 (obsolete) — Splinter Review
The other option: just always pass in a bogus ID, and have the downloadManagerUI implementation deal with that.
I'm not sure which option I prefer of these two, and maybe I'm missing a better fix. Shawn?
OS: Windows XP → All
Priority: -- → P2
Hardware: PC → All
Target Milestone: --- → Firefox 3 M9
Comment on attachment 280425 [details] [diff] [review] option 2 This is what should be happening. As it is, the id is supposed to be optional... (zero should be an invalid id as well fyi)
Attachment #280425 - Flags: review+
Alright, I'll keep 0 then, given that this is an unsigned int.
Keywords: checkin-needed
Attachment #280425 - Flags: approval1.9?
Attachment #280425 - Flags: approval1.9?
Attachment #280425 - Flags: approval1.9?
Attachment #280425 - Flags: approval1.9? → approval1.9+
Attachment #280424 - Attachment is obsolete: true
Attachment #280425 - Attachment is obsolete: true
mozilla/toolkit/components/downloads/src/nsDownloadManagerUI.js 1.3
Status: ASSIGNED → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
Reopening; I'll test my Mac later today, but on Vista, with build Mozilla/5.0 (Windows; U; Windows NT 6.0; en-US; rv:1.9a9pre) Gecko/2007092705 Minefield/3.0a9pre, once my download manager window auto-closes, and the alert notification window pops up, and I click on its link, I get a brief flash of the DM and then it quickly disappears. It should remain open. (Carsten, what do you see? You passed this on 9/14, before this was landed; http://litmus.mozilla.org/single_result.cgi?id=83682.) Was/is this a transient issue? It's never worked for me properly, afaik.
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
Confirming Stephen's post - I see the same thing on Vista HP and the latest trunk build: Mozilla/5.0 (Windows; U; Windows NT 6.0; en-US; rv:1.9a9pre) Gecko/2007092803 Minefield/3.0a9pre Firefox/3.0 ID:2007092803
(In reply to comment #9) > Windows NT 6.0; en-US; rv:1.9a9pre) Gecko/2007092705 Minefield/3.0a9pre, once > my download manager window auto-closes, and the alert notification window pops > up, and I click on its link, I get a brief flash of the DM and then it quickly > disappears. Strange interaction with the auto-close pref would be a different bug, can you file it?
Status: REOPENED → RESOLVED
Closed: 17 years ago17 years ago
Resolution: --- → FIXED
(In reply to comment #11) > (In reply to comment #9) > > Windows NT 6.0; en-US; rv:1.9a9pre) Gecko/2007092705 Minefield/3.0a9pre, once > > my download manager window auto-closes, and the alert notification window pops > > up, and I click on its link, I get a brief flash of the DM and then it quickly > > disappears. > > Strange interaction with the auto-close pref would be a different bug, can you > file it? It's the same bug, as noted in both comment 0 and the litmus testcase, but I'll oblige you :-) Filed bug 397935.
Product: Firefox → Toolkit
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: