Bug 395708: handle invalid IDs passed to nsIDownloadManagerUI::show (makes clicking on the "download complete" notification work when the download manager isn't open), r=sdwilsh